# pyo3-stubgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  deploy-python.yml  docs.yml  python.yml  tag-pr.yml
docs/: index.md  python-api.md
pyigen/: __init__.py  generate.py
pyo3_stubgen/: __init__.py  generate.py
tests/: test_generate.py
tests/assets/: expected.pyi  pyproject.toml
tests/assets/python/pypkg/: testlib.pyi
tests/assets/rust/: Cargo.toml
tests/assets/rust/src/: lib.rs
